tools: create serve binary

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,3 +1,4 @@
 [alias]
-oort-release = "run --manifest-path tools/Cargo.toml --bin release --"
-oort-rebuild-ai = "run --manifest-path tools/Cargo.toml --bin build-builtin-ais --"
+oort-release = "run -q --manifest-path tools/Cargo.toml --bin release --"
+oort-rebuild-ai = "run -q --manifest-path tools/Cargo.toml --bin build-builtin-ais --"
+oort-serve = "run -q --manifest-path tools/Cargo.toml --bin serve --"
