--- a/shared/simulator/Cargo.toml
+++ b/shared/simulator/Cargo.toml
@@ -25,14 +25,14 @@ rapier2d-f64 = { version = "0.17.1", features = ["wasm-bindgen"] }
 serde = { version = "1.0.137", features = ["derive"] }
 instant = "0.1.12"
 oort_api = { path = "../api", features = ["serde"] }
-wasmer = { version = "3.0.0-rc.1", default-features = false }
+wasmer = { version = "3.2.0-alpha.1", default-features = false }
 tar = "0.4.38"
 libflate = "1.2.0"
 walrus = { version = "0.19.0", git = "https://github.com/scrtlabs/walrus", rev = "c5777d4" }
 bytes = { version = "1.4.0", features = ["serde"] }
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
-wasmer-compiler-cranelift = { version = "3.0.0-rc.1" }
+wasmer-compiler-cranelift = { version = "3.2.0-alpha.1" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 js-sys = "0.3.57"
