--- a/shared/simulator/Cargo.toml
+++ b/shared/simulator/Cargo.toml
@@ -31,6 +31,7 @@ libflate = "1.2.0"
 walrus = { version = "0.19.0", git = "https://github.com/scrtlabs/walrus", rev = "c5777d4" }
 bytes = { version = "1.4.0", features = ["serde"] }
 static_aabb2d_index = { version = "0.7.0", features = ["unsafe_optimizations"] }
+bitvec = "1.0.1"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
 wasmer-compiler-singlepass = { version = "3.2.0-alpha.1" }
