sim: add faster stress benchmark

--- a/shared/simulator/Cargo.toml
+++ b/shared/simulator/Cargo.toml
@@ -74,5 +74,9 @@ name = "fleet"
 harness = false
 
 [[bench]]
+name = "stress"
+harness = false
+
+[[bench]]
 name = "serialization"
 harness = false
