--- a/services/compiler/Cargo.toml
+++ b/services/compiler/Cargo.toml
@@ -18,3 +18,4 @@ once_cell = "1.13"
 regex = "1.6.0"
 lazy_static = "1.4.0"
 clap = { version = "3.2.22", features = ["derive"] }
+tempfile = "3.3.0"
