--- a/services/compiler/Cargo.toml
+++ b/services/compiler/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 [dependencies]
 oort_code_encryption = { path = "../../shared/code_encryption" }
 oort_compiler = { path = "../../shared/compiler" }
-salvo = "0.36"
-salvo_extra = { version="0.36", features=["cors"] }
+salvo = { version="0.37", features=["cors"] }
 tokio = { version = "1", features = ["macros", "process"] }
 anyhow = "1.0"
 bytes = "1.1"
