--- a/services/shortcode/Cargo.toml
+++ b/services/shortcode/Cargo.toml
@@ -7,8 +7,7 @@ edition = "2021"
 [dependencies]
 oort_proto = { path = "../../shared/proto" }
 oort_code_encryption = { path = "../../shared/code_encryption" }
-salvo = "0.36"
-salvo_extra = { version="0.36", features=["cors"] }
+salvo = { version="0.37", features=["cors"] }
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
 anyhow = "1.0"
 log = "0.4.17"
