--- a/services/telemetry/Dockerfile
+++ b/services/telemetry/Dockerfile
@@ -6,7 +6,7 @@ ARG DISCORD_TELEMETRY_WEBHOOK
 RUN \
   --mount=type=cache,target=/usr/local/cargo/registry \
   --mount=type=cache,target=/usr/local/cargo/git \
-  --mount=type=cache,target=/usr/src/app/services/target \
+  --mount=type=cache,target=/usr/src/app/services/target,sharing=locked \
   cd services/telemetry && cargo install --locked --path .
 
 FROM rust:1.67.1-slim-buster
