--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,7 +2,8 @@
 oort-release = "run -q --manifest-path tools/Cargo.toml --bin release --"
 oort-rebuild-ai = "run -q --manifest-path tools/Cargo.toml --bin build-builtin-ais --"
 oort-serve = "run -q --manifest-path tools/Cargo.toml --bin serve --"
-oort-tournament  = "run -q --manifest-path tools/Cargo.toml --bin tournament --"
+oort-tournament = "run -q --manifest-path tools/Cargo.toml --bin tournament --"
+oort-compiler-loadtest = "run -q --manifest-path tools/Cargo.toml --bin compiler-loadtest -- --users 20 --run-time 2m --hatch-rate 100"
 
 [registries.crates-io]
 protocol = "sparse"
