--- a/services/backend/Cargo.toml
+++ b/services/backend/Cargo.toml
@@ -16,7 +16,11 @@ log = "0.4.17"
 rand = "0.8.5"
 regex = "1.7.1"
 reqwest = { version = "0.11.14", default-features=false, features = ["json", "rustls-tls"] }
-salvo = { version="0.37", features=["cors", "anyhow"] }
 serde_json = "1.0.93"
 stackdriver_logger = "0.8.0"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
+axum = "0.6.10"
+tower-http = { version = "0.4.0", features = ["cors", "trace"] }
+http = "0.2.9"
+tracing-subscriber = "0.3.16"
+bytes = "1.4.0"
