--- a/shared/compiler/Cargo.toml
+++ b/shared/compiler/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 anyhow = "1.0.69"
 tempdir = "0.3.7"
 glob = "0.3.1"
+log = "0.4.17"
 
 [dev-dependencies]
 criterion = { version = "0.4.0", features = ["html_reports"] }
