--- a/frontend/version_control/Cargo.toml
+++ b/frontend/version_control/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 anyhow = "1.0.71"
 chrono = "0.4.26"
 idb = "0.4.1"
+js-sys = "0.3.63"
 log = "0.4.18"
 serde = { version = "1.0.163", features = ["derive"] }
 serde-wasm-bindgen = "0.5.0"
