--- a/frontend/version_control/Cargo.toml
+++ b/frontend/version_control/Cargo.toml
@@ -15,4 +15,5 @@ log = "0.4.18"
 serde = { version = "1.0.163", features = ["derive"] }
 serde-wasm-bindgen = "0.5.0"
 sha2 = "0.10.6"
+thiserror = "1.0.40"
 wasm-bindgen = "0.2.86"
