builtin_ai: link builtin AIs into a crate for rust-analyzer

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ resolver = "2"
 members = [
     "shared/simulator",
     "shared/ai",
+    "shared/builtin_ai",
     "shared/api",
     "shared/proto",
     "shared/envelope",
