actions: split into x86 and wasm jobs

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -3,14 +3,22 @@ permissions:
   contents: read
 on: [push, pull_request]
 jobs:
-  check:
+  check-x86:
     runs-on: ubuntu-latest
-    name: check
+    name: check-x86
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+      - run: cargo check
+      - run: cargo test
+  check-wasm:
+    runs-on: ubuntu-latest
+    name: check-wasm
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
         with:
           targets: wasm32-unknown-unknown
-      - run: cargo check
+      - uses: Swatinem/rust-cache@v2
       - run: cargo check --manifest-path=frontend/Cargo.toml --target=wasm32-unknown-unknown
-      - run: cargo test
