--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -21,5 +21,6 @@ jobs:
         with:
           targets: wasm32-unknown-unknown
       - uses: Swatinem/rust-cache@v2
-        workspaces: frontend
+        with:
+          workspaces: frontend
       - run: cargo check --manifest-path=frontend/Cargo.toml --target=wasm32-unknown-unknown
