firebase: allow caching workers for 10 minutes

--- a/firebase/firebase.json
+++ b/firebase/firebase.json
@@ -14,7 +14,7 @@
         "headers": [
           {
             "key": "Cache-Control",
-            "value": "no-cache"
+            "value": "public,max-age=600"
           }
         ]
       }
