--- a/shared/api/Cargo.toml
+++ b/shared/api/Cargo.toml
@@ -10,3 +10,4 @@ repository = "https://github.com/rlane/oort3"
 [dependencies]
 oorandom = "11.1.3"
 serde = { version = "1.0", optional = true }
+maths-rs = "0.2.4"
