app: support linking to file via drag-and-drop on Firefox

--- a/frontend/app/Cargo.toml
+++ b/frontend/app/Cargo.toml
@@ -71,4 +71,9 @@ features = [
   'PointerEvent',
   'DomRect',
   'Navigator',
+  'FileSystemFileEntry',
+  'DataTransfer',
+  'DataTransferItem',
+  'DataTransferItemList',
+  'FileSystemEntry',
 ]
