--- a/shared/api/Cargo.toml
+++ b/shared/api/Cargo.toml
@@ -10,4 +10,5 @@ repository = "https://github.com/rlane/oort3"
 [dependencies]
 oorandom = "11.1.3"
 serde = { version = "1.0", optional = true }
+byteorder = "1.4.3"
 maths-rs = "0.2.4"
