--- a/frontend/app/Cargo.toml
+++ b/frontend/app/Cargo.toml
@@ -41,11 +41,12 @@ wasm-bindgen-futures = "0.4.37"
 monaco = { version = "0.3.0", features = ["yew-components"] }
 yew-router = "0.17"
 sha2 = "0.10.7"
-gloo-utils = "0.2.0"
+gloo-utils = { version = "0.2.0", features = ["serde"] }
 gloo-timers = "0.3.0"
 serde-wasm-bindgen = "0.5"
 censor = "0.3.0"
 anyhow = "1.0.75"
+gtag-js-sys = "0.2.0"
 
 [dependencies.web-sys]
 version = "0.3.64"
