--- a/tools/Cargo.toml
+++ b/tools/Cargo.toml
@@ -10,6 +10,7 @@ oort_proto = { path = "../shared/proto" }
 oort_simulator = { path = "../shared/simulator", features = ["precompile"] }
 oort_compiler = { path = "../shared/compiler" }
 oort_api = { path = "../shared/api" }
+oort_multifile = { path = "../shared/multifile" }
 firestore = "0.37.5"
 gcloud-sdk = "0.23.1"
 serde = { version = "1.0", features = ["derive"] }
