--- a/frontend/app/Cargo.toml
+++ b/frontend/app/Cargo.toml
@@ -15,6 +15,7 @@ oort_proto = { path = "../../shared/proto" }
 oort_envelope = { path = "../../shared/envelope" }
 oort_version = { path = "../../shared/version" }
 oort_version_control = { path = "../version_control" }
+oort_multifile = { path = "../../shared/multifile" }
 bincode = "1.3.3"
 chrono = "0.4.31"
 console_error_panic_hook = "0.1.7"
