--- a/services/backend/Cargo.toml
+++ b/services/backend/Cargo.toml
@@ -19,7 +19,7 @@ reqwest = { version = "0.11.20", default-features=false, features = ["json", "ru
 serde_json = "1.0.107"
 stackdriver_logger = "0.8.2"
 tokio = { version = "1.32", features = ["macros", "rt-multi-thread", "process"] }
-axum = "0.6.20"
+axum = { version = "0.6.20", features = ["macros"] }
 tower-http = { version = "0.4.4", features = ["cors", "trace"] }
 http = "0.2.9"
 tracing-subscriber = "0.3.17"
