--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -4,6 +4,7 @@ oort-rebuild-ai = "run --bin build-builtin-ais --"
 oort-serve = "run --bin serve --"
 oort-tournament = "run --bin tournament --"
 oort-compiler-loadtest = "run --bin compiler-loadtest -- --users 20 --run-time 2m --hatch-rate 100 --no-reset-metrics --no-scenario-metrics --no-transaction-metrics"
+oort-bundler = "run --bin bundler --"
 
 [registries.crates-io]
 protocol = "sparse"
