tools: add rescore alias

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -5,6 +5,7 @@ oort-serve = "run --bin serve --"
 oort-tournament = "run --bin tournament --"
 oort-compiler-loadtest = "run --bin compiler-loadtest -- --users 20 --run-time 2m --hatch-rate 100 --no-reset-metrics --no-scenario-metrics --no-transaction-metrics"
 oort-bundler = "run --bin bundler --"
+oort-rescore = "run --bin rescore --"
 
 [registries.crates-io]
 protocol = "sparse"
