--- a/services/backend/Cargo.toml
+++ b/services/backend/Cargo.toml
@@ -24,3 +24,4 @@ tower-http = { version = "0.4.4", features = ["cors", "trace"] }
 http = "0.2.9"
 tracing-subscriber = "0.3.17"
 bytes = "1.5.0"
+clap = { version = "4.4.6", features = ["derive"] }
