--- a/services/backend/Cargo.toml
+++ b/services/backend/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 oort_envelope = { path = "../../shared/envelope" }
 oort_code_encryption = { path = "../../shared/code_encryption" }
 oort_proto = { path = "../../shared/proto" }
+oort_simulator = { path = "../../shared/simulator", features = ["precompile"] }
 anyhow = "1.0"
 chrono = "0.4.31"
 firestore = "0.37.2"
@@ -25,3 +26,5 @@ http = "0.2.9"
 tracing-subscriber = "0.3.17"
 bytes = "1.5.0"
 clap = { version = "4.4.6", features = ["derive"] }
+comfy-table = "7.0.1"
+rayon = "1.8.0"
