--- a/shared/simulator/Cargo.toml
+++ b/shared/simulator/Cargo.toml
@@ -21,7 +21,7 @@ rand = "0.8.5"
 rand_chacha = "0.3.1"
 rand_distr = "0.4.3"
 rand_seeder = "0.2.3"
-rapier2d-f64 = { version = "0.17.2", features = ["wasm-bindgen"] }
+rapier2d-f64 = { version = "0.17.2", features = ["wasm-bindgen", "enhanced-determinism"] }
 serde = { version = "1.0.189", features = ["derive"] }
 instant = "0.1.12"
 oort_api = { path = "../api", features = ["serde"] }
