--- a/shared/compiler/Cargo.toml
+++ b/shared/compiler/Cargo.toml
@@ -9,6 +9,8 @@ anyhow = "1.0.75"
 tempdir = "0.3.7"
 glob = "0.3.1"
 log = "0.4.20"
+lazy_static = "1.4.0"
+regex = "1.10.2"
 
 [dev-dependencies]
 criterion = { version = "0.5.1", features = ["html_reports"] }
