--- a/frontend/app/Cargo.toml
+++ b/frontend/app/Cargo.toml
@@ -13,6 +13,7 @@ oort_simulation_worker = { path = "../simulation_worker" }
 oort_simulator = { path = "../../shared/simulator", features = ["js"], default-features = false }
 oort_proto = { path = "../../shared/proto" }
 oort_envelope = { path = "../../shared/envelope" }
+oort_multifile = { path = "../../shared/multifile" }
 oort_version = { path = "../../shared/version" }
 oort_version_control = { path = "../version_control" }
 bincode = "1.3.3"
@@ -73,6 +74,7 @@ features = [
   'DomRect',
   'Navigator',
   'FileSystemFileEntry',
+  'FileSystemDirectoryEntry',
   'DataTransfer',
   'DataTransferItem',
   'DataTransferItemList',
