sim: add sandbox scenario

--- a/shared/simulator/Cargo.toml
+++ b/shared/simulator/Cargo.toml
@@ -35,6 +35,8 @@ bitvec = "1.0.1"
 wide = "0.7.13"
 wasm-submemory = { version = "0.1.0", git = "https://github.com/rlane/wasm-submemory", rev = "4b906bf8c654685ae1d886d8a4d8a39a6495cea3" }
 anyhow = "1.0.75"
+lazy_static = "1.4.0"
+regex = "1.10.2"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wasmer-compiler-cranelift = { version = "4.2.0" }
