--- a/frontend/app/Cargo.toml
+++ b/frontend/app/Cargo.toml
@@ -47,6 +47,7 @@ serde-wasm-bindgen = "0.6"
 censor = "0.3.0"
 anyhow = "1.0.77"
 gtag-js-sys = "0.2.0"
+urlencoding = "2.1.3"
 
 [dependencies.web-sys]
 version = "0.3.66"
