app: make link to directory work on firefox

--- a/frontend/app/Cargo.toml
+++ b/frontend/app/Cargo.toml
@@ -75,6 +75,7 @@ features = [
   'DomRect',
   'Navigator',
   'FileSystemFileEntry',
+  'FileSystemDirectoryEntry',
   'DataTransfer',
   'DataTransferItem',
   'DataTransferItemList',
