--- a/shared/simulator/Cargo.toml
+++ b/shared/simulator/Cargo.toml
@@ -37,6 +37,7 @@ wasm-submemory = { version = "0.1.0", git = "https://github.com/rlane/wasm-subme
 anyhow = "1.0.77"
 lazy_static = "1.4.0"
 regex = "1.10.2"
+oort_builtin_ai = { path = "../builtin_ai" }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 wasmer-compiler-cranelift = { version = "4.2.0" }
