--- a/services/backend/Dockerfile
+++ b/services/backend/Dockerfile
@@ -1,6 +1,8 @@
 FROM rust:1.77.2-slim-bookworm as builder
 WORKDIR /usr/src/app
-RUN apt-get update
+RUN apt-get update && echo 20241130
+RUN apt-get install -y clang
+RUN cargo install wasm-opt --version 0.116.0
 COPY . .
 ARG OORT_ENVELOPE_SECRET
 ARG OORT_CODE_ENCRYPTION_SECRET
