--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -10,6 +10,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - uses: Swatinem/rust-cache@v2
+      - uses: tecolicom/actions-use-apt-tools@v1
+        with:
+          tools: binaryen
       - run: cargo check
       - run: cargo test
   check-wasm:
@@ -23,4 +26,7 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           workspaces: frontend
+      - uses: tecolicom/actions-use-apt-tools@v1
+        with:
+          tools: binaryen
       - run: cargo check --manifest-path=frontend/Cargo.toml --target=wasm32-unknown-unknown
